--- a/signup/signup.html
+++ b/signup/signup.html
@@ -16,13 +16,13 @@
         <input type="email" name="email" id="email" required /><br><br>
     
         <label for="phone">Phone Number:</label>
-        <input type="tel" name="phonenumber" id="phone" required /><br><br>
+        <input type="tel" name="phonenumber" id="phone" maxlength="20" required /><br><br>
     
         <label for="password">Password:</label>
         <input type="password" name="password" id="password" required /><br><br>
         <button type="submit">Submit</button>
       </form>
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.5.1/axios.min.js"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.7.8/axios.min.js"></script>
       <script src="./signup.js"></script>
 </body>
 </html>
