--- a/signup/signup.html
+++ b/signup/signup.html
@@ -22,6 +22,8 @@
         <input type="password" name="password" id="password" required /><br><br>
         <button type="submit">Submit</button>
       </form>
+
+      <a href="../login/login.html">Existing User - Login</a>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.7.8/axios.min.js"></script>
       <script src="./signup.js"></script>
 </body>
