--- a/public/login/login.html
+++ b/public/login/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/login/style.css">
 </head>
 <body>
     <form onsubmit="SignIn(event)">
@@ -21,6 +21,6 @@
         <a href="../signup/signup.html">New User - SignUp</a>
     
       <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.7.8/axios.min.js"></script>
-    <script src="./login.js"></script>
+    <script src="/login/login.js"></script>
 </body>
 </html>
